--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-scripts": "^0.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "https://iperez-bonet.github.io/42-guided-practice-lab"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
